misc/envoy/frontend/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address: {socket_address: {address: 0.0.0.0, port_value: 9901}}

static_resources:
  listeners:
  - name: frontend_proxy
    address: {socket_address: {address: 0.0.0.0, port_value: 57314}}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: frontend
          codec_type: AUTO
          route_config:
            name: frontend_route
            virtual_hosts:
            - name: frontend_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: frontend_cluster, timeout: { seconds: 0 } }
          http_filters:
          - name: envoy.router

      # tls_context:
      #   common_tls_context:
      #       alpn_protocols: "h2"
      #       tls_certificates:
      #       - certificate_chain: { filename: "/path/to/envoy.crt" }
      #         private_key: { filename: "/path/to/envoy.key" }

  clusters:
  - name: frontend_cluster
    connect_timeout: 1s
    type: STATIC
    lb_policy: LEAST_REQUEST
    http2_protocol_options: { }
    load_assignment:
      cluster_name: frontend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: 1.2.3.4, port_value: 57314}}}
        - endpoint: {address: {socket_address: {address: 5.6.7.8, port_value: 57314}}}
